Fix up hero spacing

--- a/assets/css/com/hero.less
+++ b/assets/css/com/hero.less
@@ -21,6 +21,7 @@
   .intro {
     flex: 1;
     min-width: 300px;
+    max-width: 550px;
 
     p {
       font-size: 1.1rem;
@@ -34,7 +35,7 @@
     }
 
     @media (min-width: @tablet-vertical) {
-      padding-right: 50px;
+      padding-right: 75px;
     }
   }
 
@@ -75,6 +76,7 @@
     margin-top: 2rem;
 
     @media (min-width: @desktop) {
+      margin: initial;
       margin-top: 0;
     }
 
